[project]
name = "data-quality-openenv"
version = "0.1.0"
description = "Data Quality & Validation OpenEnv environment"
authors = [
    { name = "Nidhi Bhat" }
]
dependencies = [
    "openenv-core",
    "pydantic",
    "requests",
    "openai"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
